--- a/data-analysis/scripts/save_data_props.ipynb
+++ b/data-analysis/scripts/save_data_props.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# !pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2768, 155)\n"
+      "(2729, 171)\n"
      ]
     },
     {
@@ -46,211 +57,211 @@
        "      <th>LemmaID</th>\n",
        "      <th>Code</th>\n",
        "      <th>YouTube Video</th>\n",
-       "      <th>Vimeo Video</th>\n",
        "      <th>SignFrequency(M)</th>\n",
        "      <th>SignFrequency(SD)</th>\n",
        "      <th>SignFrequency(Z)</th>\n",
        "      <th>SignFrequency(N)</th>\n",
        "      <th>PercentUnknown</th>\n",
+       "      <th>SignFrequency(M-Native)</th>\n",
        "      <th>...</th>\n",
-       "      <th>MinorLocationM6.2.0</th>\n",
-       "      <th>SecondMinorLocationM6.2.0</th>\n",
-       "      <th>ContactM6.2.0</th>\n",
-       "      <th>NonDominantHandshapeM6.2.0</th>\n",
-       "      <th>UlnarRotationM6.2.0</th>\n",
-       "      <th>Batch</th>\n",
-       "      <th>Item</th>\n",
-       "      <th>List</th>\n",
-       "      <th>bglm_aoa</th>\n",
-       "      <th>empirical_aoa</th>\n",
+       "      <th>Transparency Z</th>\n",
+       "      <th>H index</th>\n",
+       "      <th>SignBankID</th>\n",
+       "      <th>Parameter.Neighborhood.Density.2.0</th>\n",
+       "      <th>Neighborhood Density 2.0</th>\n",
+       "      <th>Parameter.Neighborhood.Density.2.0.1</th>\n",
+       "      <th>Neighborhood Density 2.0.1</th>\n",
+       "      <th>DominantTranslation</th>\n",
+       "      <th>SignBankID.1</th>\n",
+       "      <th>Neighborhood Density</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>&amp;=arms-cross</td>\n",
        "      <td>&amp;=arms-cross</td>\n",
        "      <td>J_01_098</td>\n",
-       "      <td>&lt;iframe width=\"280\" height=\"158\" src=\"https://...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3.467</td>\n",
        "      <td>2.177</td>\n",
        "      <td>-0.458</td>\n",
        "      <td>30.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>3.400</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>&amp;=arms-cross\\t</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>J</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>&amp;=clap</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>J_02_076</td>\n",
-       "      <td>&lt;iframe width=\"280\" height=\"158\" src=\"https://...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.867</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.127</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>J</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>&amp;=arms-cross\\t</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>&amp;=clasp</td>\n",
-       "      <td>$=clasp</td>\n",
-       "      <td>J_01_032</td>\n",
-       "      <td>&lt;iframe width=\"280\" height=\"158\" src=\"https://...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.308</td>\n",
-       "      <td>1.644</td>\n",
-       "      <td>-1.129</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>J</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>&amp;=cover-ears</td>\n",
-       "      <td>&amp;=cover-ears</td>\n",
-       "      <td>J_03_047</td>\n",
-       "      <td>&lt;iframe width=\"280\" height=\"158\" src=\"https://...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.280</td>\n",
-       "      <td>1.646</td>\n",
-       "      <td>-1.163</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>J</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>&amp;=raise-hand</td>\n",
        "      <td>&amp;=raise-hand</td>\n",
        "      <td>H_02_048</td>\n",
-       "      <td>&lt;iframe width=\"280\" height=\"158\" src=\"https://...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>5.154</td>\n",
        "      <td>1.891</td>\n",
        "      <td>0.544</td>\n",
        "      <td>28.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>5.500</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>&amp;=raise-hand\\t</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&amp;=raise-hand\\t</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>&amp;=sigh</td>\n",
+       "      <td>&amp;=sigh</td>\n",
+       "      <td>H_03_086</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.931</td>\n",
+       "      <td>1.751</td>\n",
+       "      <td>-0.196</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.267</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>&amp;=sigh\\t</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>H</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>&amp;=sigh\\t</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1_dollar</td>\n",
+       "      <td>1_dollar</td>\n",
+       "      <td>C_02_025</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.034</td>\n",
+       "      <td>1.500</td>\n",
+       "      <td>-0.775</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.944</td>\n",
+       "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>DOLLAR</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DOLLAR</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 155 columns</p>\n",
+       "<p>5 rows × 171 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        EntryID       LemmaID      Code  \\\n",
-       "0  &=arms-cross  &=arms-cross  J_01_098   \n",
-       "1        &=clap           NaN  J_02_076   \n",
-       "2       &=clasp       $=clasp  J_01_032   \n",
-       "3  &=cover-ears  &=cover-ears  J_03_047   \n",
-       "4  &=raise-hand  &=raise-hand  H_02_048   \n",
+       "        EntryID       LemmaID      Code  YouTube Video  SignFrequency(M)  \\\n",
+       "0           NaN           NaN       NaN            NaN               NaN   \n",
+       "1  &=arms-cross  &=arms-cross  J_01_098            NaN             3.467   \n",
+       "2  &=raise-hand  &=raise-hand  H_02_048            NaN             5.154   \n",
+       "3        &=sigh        &=sigh  H_03_086            NaN             3.931   \n",
+       "4      1_dollar      1_dollar  C_02_025            NaN             3.034   \n",
        "\n",
-       "                                       YouTube Video Vimeo Video  \\\n",
-       "0  <iframe width=\"280\" height=\"158\" src=\"https://...         NaN   \n",
-       "1  <iframe width=\"280\" height=\"158\" src=\"https://...         NaN   \n",
-       "2  <iframe width=\"280\" height=\"158\" src=\"https://...         NaN   \n",
-       "3  <iframe width=\"280\" height=\"158\" src=\"https://...         NaN   \n",
-       "4  <iframe width=\"280\" height=\"158\" src=\"https://...         NaN   \n",
+       "   SignFrequency(SD)  SignFrequency(Z)  SignFrequency(N)  PercentUnknown  \\\n",
+       "0                NaN               NaN               NaN             NaN   \n",
+       "1              2.177            -0.458              30.0             0.0   \n",
+       "2              1.891             0.544              28.0             0.0   \n",
+       "3              1.751            -0.196              30.0             0.0   \n",
+       "4              1.500            -0.775              29.0             0.0   \n",
        "\n",
-       "   SignFrequency(M)  SignFrequency(SD)  SignFrequency(Z)  SignFrequency(N)  \\\n",
-       "0             3.467              2.177            -0.458              30.0   \n",
-       "1             3.867                NaN            -0.127               NaN   \n",
-       "2             2.308              1.644            -1.129              29.0   \n",
-       "3             2.280              1.646            -1.163              28.0   \n",
-       "4             5.154              1.891             0.544              28.0   \n",
+       "   SignFrequency(M-Native)  ...  Transparency Z  H index      SignBankID  \\\n",
+       "0                      NaN  ...             NaN      NaN             NaN   \n",
+       "1                    3.400  ...             NaN      NaN  &=arms-cross\\t   \n",
+       "2                    5.500  ...             NaN      NaN  &=raise-hand\\t   \n",
+       "3                    3.267  ...             NaN      NaN        &=sigh\\t   \n",
+       "4                    2.944  ...             NaN      NaN          DOLLAR   \n",
        "\n",
-       "   PercentUnknown  ...  MinorLocationM6.2.0  SecondMinorLocationM6.2.0  \\\n",
-       "0             0.0  ...                  NaN                        NaN   \n",
-       "1             NaN  ...                  NaN                        NaN   \n",
-       "2             0.0  ...                  NaN                        NaN   \n",
-       "3             0.0  ...                  NaN                        NaN   \n",
-       "4             0.0  ...                  NaN                        NaN   \n",
+       "   Parameter.Neighborhood.Density.2.0  Neighborhood Density 2.0  \\\n",
+       "0                                 NaN                       NaN   \n",
+       "1                                 0.0                       3.0   \n",
+       "2                                 0.0                       3.0   \n",
+       "3                                 0.0                       3.0   \n",
+       "4                                 9.0                       0.0   \n",
        "\n",
-       "   ContactM6.2.0  NonDominantHandshapeM6.2.0  UlnarRotationM6.2.0  Batch  \\\n",
-       "0            NaN                         NaN                  NaN      J   \n",
-       "1            NaN                         NaN                  NaN      J   \n",
-       "2            NaN                         NaN                  NaN      J   \n",
-       "3            NaN                         NaN                  NaN      J   \n",
-       "4            NaN                         NaN                  NaN      H   \n",
+       "   Parameter.Neighborhood.Density.2.0.1  Neighborhood Density 2.0.1  \\\n",
+       "0                                   NaN                         NaN   \n",
+       "1                                   0.0                         3.0   \n",
+       "2                                   0.0                         3.0   \n",
+       "3                                   0.0                         3.0   \n",
+       "4                                   9.0                         0.0   \n",
        "\n",
-       "   Item  List  bglm_aoa  empirical_aoa  \n",
-       "0  98.0   1.0       NaN            NaN  \n",
-       "1  76.0   2.0       NaN            NaN  \n",
-       "2  32.0   1.0       NaN            NaN  \n",
-       "3  47.0   3.0       NaN            NaN  \n",
-       "4  48.0   2.0       NaN            NaN  \n",
+       "   DominantTranslation    SignBankID.1  Neighborhood Density  \n",
+       "0                  NaN             NaN                     0  \n",
+       "1                  NaN  &=arms-cross\\t                     0  \n",
+       "2                  NaN  &=raise-hand\\t                     0  \n",
+       "3                  NaN        &=sigh\\t                     0  \n",
+       "4                  NaN          DOLLAR                     0  \n",
        "\n",
-       "[5 rows x 155 columns]"
+       "[5 rows x 171 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sign_df = pd.read_csv('new-data/signdata_latest.csv')\n",
+    "sign_df = pd.read_csv('new-data/default-nd.csv')\n",
     "print(sign_df.shape)\n",
     "sign_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -264,24 +275,33 @@
        "       'PercentGlossAgreement(Native)', 'Iconicity(M)', 'Iconicity(SD)',\n",
        "       'Iconicity(Z)', 'Iconicity(N)', 'Iconicity_ID', 'SubtLexUSLog10WF',\n",
        "       'LexicalClass', 'SignOnset(ms)', 'SignOffset(ms)', 'SignLength(ms)',\n",
-       "       'ClipLength(ms)', 'MinimalNeighborhoodDensity',\n",
-       "       'MaximalNeighborhoodDensity', 'Parameter-BasedNeighborhoodDensity',\n",
-       "       'D.Iconicity(M) all', 'D.Iconicity(SD) all', 'D.Iconicity(N) all',\n",
-       "       'D.Iconicity(Z) all', 'D.Iconicity(M) native', 'D.Iconicity(SD) native',\n",
-       "       'D.Iconicity(N) native', 'D.Iconicity(Z) native', 'Complexity',\n",
-       "       'RightWristX', 'RightWristcentroidY', 'DistanceRightWristCentroid2Nose',\n",
-       "       'IconicityType', 'Initialized.2.0', 'FingerspelledLoanSign.2.0',\n",
-       "       'Compound.2.0', 'NumberOfMorphemes.2.0', 'Handshape.2.0',\n",
-       "       'MarkedHandshape.2.0', 'SelectedFingers.2.0', 'Flexion.2.0',\n",
-       "       'FlexionChange.2.0', 'Spread.2.0', 'SpreadChange.2.0',\n",
+       "       'ClipLength(ms)', 'D.Iconicity(M) all', 'D.Iconicity(SD) all',\n",
+       "       'D.Iconicity(N) all', 'D.Iconicity(Z) all', 'D.Iconicity(M) native',\n",
+       "       'D.Iconicity(SD) native', 'D.Iconicity(N) native',\n",
+       "       'D.Iconicity(Z) native', 'IconicityType', 'Initialized.2.0',\n",
+       "       'FingerspelledLoanSign.2.0', 'Compound.2.0', 'NumberOfMorphemes.2.0',\n",
+       "       'Handshape.2.0', 'MarkedHandshape.2.0', 'SelectedFingers.2.0',\n",
+       "       'Flexion.2.0', 'FlexionChange.2.0', 'Spread.2.0', 'SpreadChange.2.0',\n",
        "       'ThumbPosition.2.0', 'ThumbContact.2.0', 'SignType.2.0', 'Movement.2.0',\n",
        "       'MajorLocation.2.0', 'MinorLocation.2.0', 'SecondMinorLocation.2.0',\n",
-       "       'Contact.2.0', 'NonDominantHandshape.2.0', 'UlnarRotation.2.0', 'Batch',\n",
-       "       'Item', 'List', 'bglm_aoa', 'empirical_aoa'],\n",
+       "       'Contact.2.0', 'NonDominantHandshape.2.0', 'UlnarRotation.2.0',\n",
+       "       'bglm_aoa', 'empirical_aoa', 'SignType.2.0Frequency',\n",
+       "       'MajorLocation.2.0Frequency', 'MinorLocation.2.0Frequency',\n",
+       "       'SecondMinorLocation.2.0Frequency', 'Movement.2.0Frequency',\n",
+       "       'SelectedFingers.2.0Frequency', 'Flexion.2.0Frequency',\n",
+       "       'FlexionChange.2.0Frequency', 'RepeatedMovement.2.0Frequency',\n",
+       "       'Contact.2.0Frequency', 'Spread.2.0Frequency',\n",
+       "       'SpreadChange.2.0Frequency', 'ThumbContact.2.0Frequency',\n",
+       "       'ThumbPosition.2.0Frequency', 'UlnarRotation.2.0Frequency',\n",
+       "       'Transparency M', 'Transparency SD', 'Transparency Z', 'H index',\n",
+       "       'SignBankID', 'Parameter.Neighborhood.Density.2.0',\n",
+       "       'Neighborhood Density 2.0', 'Parameter.Neighborhood.Density.2.0.1',\n",
+       "       'Neighborhood Density 2.0.1', 'DominantTranslation', 'SignBankID.1',\n",
+       "       'Neighborhood Density'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,9 +333,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (asl-lex)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "asl-lex"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
