Replace Neighborhood density on pair plots page. Add ability to see which signs are being hovered on

--- a/data-analysis/scripts/asl-playground.ipynb
+++ b/data-analysis/scripts/asl-playground.ipynb
@@ -29945,10 +29945,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Change sign plot to neighborhood density\n",
+    "\n",
+    "sign_props_df = pd.read_json('../../visualization/data/sign_props.json')\n",
+    "sign_props_df = sign_props_df[['Code','EntryID','SignFrequency(M)','Iconicity(M)','LexicalClass','Parameter.Neighborhood.Density.2.0.1']]\n",
+    "sign_props_df.head()\n",
+    "\n",
+    "sign_props_df.to_csv('../../visualization/data/density_subdf_ind_w_entryID.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
